--- a/public/stylesheets/the-shape-of-design.css
+++ b/public/stylesheets/the-shape-of-design.css
@@ -7,4 +7,13 @@ body > header
 body > header h1 em
 {
 	color: #333333;
+	-webkit-transition: all 0.2s;
+	transition: all 0.2s;
+}
+
+body > header h1 a:hover,
+body > header h1 a:hover em
+{
+	color: #E44249;
+	text-decoration: none;
 }
