--- a/public/stylesheets/the-shape-of-design.css
+++ b/public/stylesheets/the-shape-of-design.css
@@ -1,3 +1,10 @@
+a,
+a:hover,
+a:focus
+{
+	color: #E44249;
+}
+
 body > header
 {
 	background-color: #F7F7EC;
@@ -7,13 +14,19 @@ body > header
 body > header h1 em
 {
 	color: #333333;
-	-webkit-transition: all 0.2s;
-	transition: all 0.2s;
 }
 
 body > header h1 a:hover,
 body > header h1 a:hover em
 {
 	color: #E44249;
-	text-decoration: none;
+}
+
+body > header h1 a,
+body > header h1 em,
+body > header h1 a:hover,
+body > header h1 a:hover em
+{
+	-webkit-transition: all 1s;
+	transition: all 1s;
 }
