--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Unsubscribed | Books &amp; Conversations</title>
+		<title>{{ page.title }} | Books &amp; Conversations</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="http://fonts.googleapis.com/css?family=Open+Sans:300,800|Gentium+Book+Basic:400,400italic" rel="stylesheet" type="text/css">
 		<link href="stylesheets/bootstrap.css" rel="stylesheet" type="text/css">
@@ -33,18 +33,7 @@
 			</div>
 		</header>
 
-		<article class="jumbotron">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-6 col-md-offset-3 form-horizontal">
-				<h2>Sorry to see you go.</h2>
-				<p>I hate saying goodbyes, please give <em>Books &amp; Conversations</em> another chance.  Things will be different this time&hellip;</p>
-				<p>I promise.</p>
-				<p><a href="/subscribe" class="btn btn-large btn-default">Subscribe</a></p>
-			</div>
-		</div>
-	</div>
-</article>
+		{{ content }}
 
 		<footer>
 			<div class="container">
@@ -59,26 +48,11 @@
 						<p>Want to take part in the next conversation?  <a href="mailto:&#106;&#111;&#104;&#110;&#064;&#115;&#109;&#097;&#108;&#108;&#101;&#112;&#105;&#099;&#046;&#099;&#111;&#109;">Get in touch</a>.</p>
 					</div>
 
-					<div class="col-sm-4">
-	<h4>Updates</h4>
-	<p><em>Books &amp; Conversations</em> is on <a href="https://twitter.com/small_epic">Twitter</a> and <a href="https://twitter.com/smallepic">Facebook</a>.  You can also subscribe to updates via <a href="/subscribe">email</a> or <a href="#">RSS</a>.</p>
-</div>
+					{% include footer_updates.html %}
 				</div>
 			</div>
 		</footer>
 
-		<nav>
-	<div class="container">
-		<div class="row">
-			<div class="col-12">
-				<p class="">Copyright &copy; 2013, Made by <a href="https://smallepic.com/">Small Epic</a>.</p>
-				<ul class="list-inline-separated">
-					<li><a href="/about">About</a></li>
-					<li><del>Archive</del></li>
-				</ul>
-			</div>
-		</div>
-	</div>
-</nav>
+		{% include footer.html %}
 	</body>
 </html>
