Added RSS feed.

--- a/_includes/footer_published.html
+++ b/_includes/footer_published.html
@@ -1,4 +1,4 @@
 <div class="col-sm-4">
 	<h4>Published</h4>
-	<p>{{ page.date | date: "%A, %d %B, %Y" }}<br>The original discussion took place between {{ page.start | date: "%A, %d %B, %Y" }} and {{ page.end | date: "%A, %d %B, %Y" }}.<br><a href="{{ page.id }}">Permalink</a></p>
+	<p>{{ page.date | date: "%A, %d %B, %Y" }}<br>The original discussion took place between {{ page.start | date: "%A, %d %B, %Y" }} and {{ page.end | date: "%A, %d %B, %Y" }}.<br><a href="{{ page.url }}">Permalink</a></p>
 </div>
