Revisions to markup and style sheets.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,18 +1,18 @@
 <title>{{ page.title | escape }} | {{ site.name | escape }}</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta content="{{ site.url }}" property="og:url" />
-<meta content="website" property="og:type" />
-<meta content="{{ page.title | escape }} | {{ site.name | escape }}" property="og:title" />
-{% if page.description %}<meta content="{{ page.description | escape }}" property="og:description" />{% else %}<meta content="{{ site.description | escape }}" property="og:description" />{% endif %}
-<meta content="" property="og:image" />
-<meta content="summary" name="twitter:card" />
-<meta content="{{ site.twitter }}" name="twitter:creator:id" />
-<meta content="{{ page.title | escape }} | {{ site.name | escape }}" name="twitter:title" />
-{% if page.description %}<meta content="{{ page.description | escape }}" name="twitter:description" />{% else %}<meta content="{{ site.description | escape }}" name="twitter:description" />{% endif %}
-<meta content="" name="twitter:image" />
+<meta content="{{ site.url }}" property="og:url">
+<meta content="website" property="og:type">
+<meta content="{{ page.title | escape }} | {{ site.name | escape }}" property="og:title">
+{% if page.description %}<meta content="{{ page.description | escape }}" property="og:description">{% else %}<meta content="{{ site.description | escape }}" property="og:description">{% endif %}
+<meta content="" property="og:image">
+<meta content="summary" name="twitter:card">
+<meta content="{{ site.twitter }}" name="twitter:creator:id">
+<meta content="{{ page.title | escape }} | {{ site.name | escape }}" name="twitter:title">
+{% if page.description %}<meta content="{{ page.description | escape }}" name="twitter:description">{% else %}<meta content="{{ site.description | escape }}" name="twitter:description">{% endif %}
+<meta content="" name="twitter:image">
 
-<link rel="alternate" type="application/rss+xml" title="Books &amp; Conversations" href="/rss.xml" />
+<link rel="alternate" type="application/rss+xml" title="Books &amp; Conversations" href="/rss.xml">
 <link href="//fonts.googleapis.com/css?family=Open+Sans:300,800|Gentium+Book+Basic:400,400italic" rel="stylesheet" type="text/css">
 <link href="/stylesheets/bootstrap.css" rel="stylesheet" type="text/css">
 <link href="/stylesheets/bootstrap-buttons.css" rel="stylesheet" type="text/css">
