Added TODO items.

--- a/_includes/footer_updates.html
+++ b/_includes/footer_updates.html
@@ -1,4 +1,4 @@
 <div class="col-sm-4">
 	<h4>Updates</h4>
-	<p><em>Books &amp; Conversations</em> is on <a href="https://twitter.com/{{ site.twitter }}">Twitter</a> and <a href="https://twitter.com/{{ site.facebook }}">Facebook</a>.  You can also subscribe to updates via <a href="/subscribe">email</a> or <a href="/rss.xml">RSS</a>.</p>
+	<p><em>Books &amp; Conversations</em> is on <a href="https://twitter.com/{{ site.twitter }}">Twitter</a> and <a href="https://www.facebook.com/{{ site.facebook }}">Facebook</a>.  You can also subscribe to updates via <a href="/subscribe">email</a> or <a href="/rss.xml">RSS</a>.</p>
 </div>
