Updated RSS URL in header link tag.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,7 +14,7 @@
 <!-- TODO: Create Twitter icon. -->
 <meta content="" name="twitter:image">
 
-<link rel="alternate" type="application/rss+xml" title="Books &amp; Conversations" href="/rss.xml">
+<link rel="alternate" type="application/rss+xml" title="Books &amp; Conversations" href="{{ site.feedburner }}">
 <link href="//fonts.googleapis.com/css?family=Open+Sans:300,800|Gentium+Book+Basic:400,400italic" rel="stylesheet" type="text/css">
 <link href="/stylesheets/bootstrap.css" rel="stylesheet" type="text/css">
 <link href="/stylesheets/bootstrap-buttons.css" rel="stylesheet" type="text/css">
