--- a/_includes/footer_updates.html
+++ b/_includes/footer_updates.html
@@ -1,4 +1,4 @@
 <div class="col-sm-4">
 	<h4>Updates</h4>
-	<p><em>Books &amp; Conversations</em> is on <a href="{{ site.twitter }}">Twitter</a> and <a href="{{ site.facebook }}">Facebook</a>.  You can also subscribe to updates via <a href="/subscribe">email newsletter</a> or <a href="{{ site.feedburner }}">RSS feed</a>.</p>
+	<p><em>Books &amp; Conversations</em> is on <a href="{{ site.twitter_url }}">Twitter</a> and <a href="{{ site.facebook_url }}">Facebook</a>.  You can also subscribe to updates via <a href="/subscribe">email newsletter</a> or <a href="{{ site.feedburner }}">RSS feed</a>.</p>
 </div>
