--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <title>{{ page.title | escape }} | {{ site.name | escape }}</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta content="{{ site.url }}" property="og:url">
+<meta content="{{ site.url }}{{ page.url }}" property="og:url">
 <meta content="website" property="og:type">
 <meta content="{{ page.title | escape }} | {{ site.name | escape }}" property="og:title">
 {% if page.description %}<meta content="{{ page.description | escape }}" property="og:description">{% else %}<meta content="{{ site.description | escape }}" property="og:description">{% endif %}
