--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,13 +6,13 @@
 <meta content="{{ page.title | escape }} | {{ site.name | escape }}" property="og:title">
 {% if page.description %}<meta content="{{ page.description | escape }}" property="og:description">{% else %}<meta content="{{ site.description | escape }}" property="og:description">{% endif %}
 <!-- TODO: Create Facebook icon. -->
-<!-- <meta content="" property="og:image"> -->
+<meta content="{{ site.url }}{{ page.image }}" property="og:image">
 <meta content="summary" name="twitter:card">
 <meta content="{{ site.twitter }}" name="twitter:creator:id">
 <meta content="{{ page.title | escape }} | {{ site.name | escape }}" name="twitter:title">
 {% if page.description %}<meta content="{{ page.description | escape }}" name="twitter:description">{% else %}<meta content="{{ site.description | escape }}" name="twitter:description">{% endif %}
 <!-- TODO: Create Twitter icon. -->
-<!-- <meta content="" name="twitter:image"> -->
+<meta content="{{ site.url }}{{ page.image }}" name="twitter:image">
 
 <link rel="alternate" type="application/rss+xml" title="Books &amp; Conversations" href="{{ site.feedburner }}">
 <link href="//fonts.googleapis.com/css?family=Open+Sans:300,800|Gentium+Book+Basic:400,400italic" rel="stylesheet" type="text/css">
