--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-12">
-						<h1><a href="/">Books<br><em>&amp;</em><br>Conversations</a></h1>
+						<h1><a href="/">Books <em>&amp;</em> Conversations</a></h1>
 					</div>
 				</div>
 			</div>
