--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,15 +1,15 @@
-<title>{{ page.title | escape }} | {{ site.name | escape }}</title>
+{% if page.title %}<title>{{ page.title | escape }} | {{ site.name | escape }}</title>{% else %}<title>{{ site.name | escape }}</title>{% endif %}
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta property="og:url" content="{{ site.url }}{{ page.url }}">
 <meta property="og:type" content="website">
-<meta property="og:title" content="{{ page.title | escape }} | {{ site.name | escape }}">
+{% if page.title %}<meta name="og:title" content="{{ page.title | escape }} | {{ site.name | escape }}">{% else %}<meta name="og:title" content="{{ site.name | escape }}">{% endif %}
 {% if page.description %}<meta property="og:description" content="{{ page.description | escape }}">{% else %}<meta property="og:description" content="{{ site.description | escape }}">{% endif %}
 {% if page.image %}<meta property="og:image" content="{{ site.url }}{{ page.image }}">{% else %}<meta property="og:image" content="{{ site.url }}/images/logo-books-and-conversations.png">{% endif %}
 <meta name="twitter:card" content="summary">
 <meta name="twitter:creator:id" content="{{ site.twitter }}">
 <meta name="twitter:site:id" content="{{ site.twitter }}">
-<meta name="twitter:title" content="{{ page.title | escape }} | {{ site.name | escape }}">
+{% if page.title %}<meta name="twitter:title" content="{{ page.title | escape }} | {{ site.name | escape }}">{% else %}<meta name="twitter:title" content="{{ site.name | escape }}">{% endif %}
 {% if page.description %}<meta name="twitter:description" content="{{ page.description | escape }}">{% else %}<meta name="twitter:description" content="{{ site.description | escape }}">{% endif %}
 {% if page.image %}<meta name="twitter:image" content="{{ site.url }}{{ page.image }}">{% else %}<meta name="twitter:image" content="{{ site.url }}/images/logo-books-and-conversations.png">{% endif %}
 
