--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta property="og:url" content="{{ site.url }}{{ page.url }}">
 <meta property="og:type" content="website">
-{% if page.title %}<meta name="og:title" content="{{ page.title | escape }} | {{ site.name | escape }}">{% else %}<meta name="og:title" content="{{ site.name | escape }}">{% endif %}
+{% if page.title %}<meta property="og:title" content="{{ page.title | escape }} | {{ site.name | escape }}">{% else %}<meta property="og:title" content="{{ site.name | escape }}">{% endif %}
 {% if page.description %}<meta property="og:description" content="{{ page.description | escape }}">{% else %}<meta property="og:description" content="{{ site.description | escape }}">{% endif %}
 {% if page.image %}<meta property="og:image" content="{{ site.url }}{{ page.image }}">{% else %}<meta property="og:image" content="{{ site.url }}/images/logo-books-and-conversations.png">{% endif %}
 <meta name="twitter:card" content="summary">
