--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,13 +21,13 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-4">
-						<h4>Suggest</h4>
-						<p>Know a book that would spark a great conversation?  <a href="mailto:&#106;&#111;&#104;&#110;&#064;&#115;&#109;&#097;&#108;&#108;&#101;&#112;&#105;&#099;&#046;&#099;&#111;&#109;">Let me know</a>.</p>
+						<h4>Participate</h4>
+						<p>Want to take part in the next conversation?  <a href="mailto:&#106;&#111;&#104;&#110;&#064;&#115;&#109;&#097;&#108;&#108;&#101;&#112;&#105;&#099;&#046;&#099;&#111;&#109;">Get in touch</a>.</p>
 					</div>
 
 					<div class="col-sm-4">
-						<h4>Converse</h4>
-						<p>Want to take part in the next conversation?  <a href="mailto:&#106;&#111;&#104;&#110;&#064;&#115;&#109;&#097;&#108;&#108;&#101;&#112;&#105;&#099;&#046;&#099;&#111;&#109;">Get in touch</a>.</p>
+						<h4>Suggest</h4>
+						<p>Know a great book worthy of discussion?  <a href="mailto:&#106;&#111;&#104;&#110;&#064;&#115;&#109;&#097;&#108;&#108;&#101;&#112;&#105;&#099;&#046;&#099;&#111;&#109;">Let me know</a>.</p>
 					</div>
 
 					{% include footer_updates.html %}
