--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
 {% if page.description %}<meta name="twitter:description" content="{{ page.description | escape }}">{% else %}<meta name="twitter:description" content="{{ site.description | escape }}">{% endif %}
 {% if page.image %}<meta name="twitter:image" content="{{ site.url }}{{ page.image }}">{% else %}<meta name="twitter:image" content="{{ site.url }}/images/logo-books-and-conversations.png">{% endif %}
 
-<link rel="alternate" type="application/rss+xml" title="Books &amp; Conversations" href="{{ site.feedburner }}">
+<link rel="alternate" type="application/rss+xml" title="Books &amp; Conversations" href="{{ site.feedburner_url }}">
 <link href="//fonts.googleapis.com/css?family=Open+Sans:300,800|Gentium+Book+Basic:400,400italic" rel="stylesheet" type="text/css">
 <link href="/stylesheets/bootstrap.css" rel="stylesheet" type="text/css">
 <link href="/stylesheets/bootstrap-buttons.css" rel="stylesheet" type="text/css">
