--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
 		<header>
 			<div class="container">
 				<div class="row">
-					<div class="col-12">
+					<div class="col-lg-12">
 						<h1><a href="/">Books <em>&amp;</em> Conversations</a></h1>
 					</div>
 				</div>
