Added masthead markup and styles to The Shape of Design discussion.

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -367,3 +367,14 @@ body > nav p
 {
 	margin-bottom: 0px;
 }
+
+.masthead
+{
+	padding-bottom: 10px;
+	padding-top: 10px;
+}
+
+.masthead h1
+{
+	font-size: 14px;
+}
