--- a/stylesheets/the-shape-of-design.css
+++ b/stylesheets/the-shape-of-design.css
@@ -13,7 +13,6 @@ a:focus
 body > header
 {
 	background-color: #F7F7EC;
-	min-height: 100%;
 }
 
 body > header h1 em
@@ -34,4 +33,21 @@ body > header h1 a:hover em
 {
 	-webkit-transition: all 1s;
 	transition: all 1s;
+}
+
+.masthead
+{
+	background-color: #E44249;
+}
+
+.masthead h1,
+.masthead h1 em
+{
+	color: #F7F7EC;
+}
+
+.masthead h1 a:hover,
+.masthead h1 a:hover em
+{
+	color: #333333;
 }
