--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 				<div class="row">
 					<div class="col-sm-4">
 						<h4>Participate</h4>
-						<p>Want to take part in the next conversation?  <a href="mailto:&#106;&#111;&#104;&#110;&#064;&#115;&#109;&#097;&#108;&#108;&#101;&#112;&#105;&#099;&#046;&#099;&#111;&#109;">Get in touch</a>.</p>
+						<p>Want to take part in the next discussion?  <a href="mailto:&#106;&#111;&#104;&#110;&#064;&#115;&#109;&#097;&#108;&#108;&#101;&#112;&#105;&#099;&#046;&#099;&#111;&#109;">Get in touch</a>.</p>
 					</div>
 
 					<div class="col-sm-4">
