--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
 						<p>Know a great book worthy of discussion?  <a href="mailto:&#106;&#111;&#104;&#110;&#064;&#115;&#109;&#097;&#108;&#108;&#101;&#112;&#105;&#099;&#046;&#099;&#111;&#109;">Let me know</a>.</p>
 					</div>
 
-					{% include footer_updates.html %}
+					{% include footer_subscribe.html %}
 				</div>
 			</div>
 		</footer>
