--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,12 +5,20 @@
 	</head>
 
 	<body>
-		<header>
+		<header class="masthead masthead-lg">
 			<div class="container">
 				<div class="row">
-					<div class="col-lg-12">
+					<div class="col-lg-offset-3 col-lg-6">
 						<h1><a href="/">Books <em>&amp;</em> Conversations</a></h1>
 					</div>
+
+					<nav class="col-lg-3">
+						<ul class="list-inline">
+							<li><a href="/about">About</a></li>
+							<li><a href="/participate">Participate</a></li>
+							<li><a href="/subscribe">Subscribe</a></li>
+						</ul>
+					</nav>
 				</div>
 			</div>
 		</header>
