--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,8 @@
 				<p class="">Copyright &copy; 2013, Made by <a href="https://smallepic.com/">Small Epic</a>.</p>
 				<ul class="list-inline-separated">
 					<li><a href="/about">About</a></li>
-					<li><del>Archive</del></li>
+					<li><a href="/participate">Participate</a></li>
+					<li><a href="/subscribe">Subscribe</a></li>
 				</ul>
 			</div>
 		</div>
