--- a/sass/styles/_jumbotron.scss
+++ b/sass/styles/_jumbotron.scss
@@ -20,11 +20,22 @@
   blockquote
   {
     color: #FFFFFF;
-    font-size: $font-size-h3;
+    font-size: $font-size-h4;
+    padding: 0;
+
+    @media (min-width: $screen-sm-min)
+    {
+      font-size: $font-size-h3;
+    }
 
     p
     {
-      font-size: $font-size-h3;
+      font-size: $font-size-h4;
+
+      @media (min-width: $screen-sm-min)
+      {
+        font-size: $font-size-h3;
+      }
     }
   }
 
