--- a/sass/styles/_type.scss
+++ b/sass/styles/_type.scss
@@ -86,6 +86,11 @@ blockquote
 {
   p
   {
-    font-size: $font-size-h2;
+    font-size: $blockquote-font-size;
+
+    @media (min-width: $screen-sm-min)
+    {
+      font-size: $font-size-h2;
+    }
   }
 }
