--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -1,4 +1,4 @@
-<header class="{% if page.type == 'post' %}masthead masthead-sm{% else %}masthead{% endif %}">
+<header class="{% if page.type == 'posts' %}masthead masthead-sm{% else %}masthead{% endif %}">
   <div class="container">
     <div class="row">
       <div class="col-lg-offset-3 col-lg-6">
