--- a/_includes/head.html
+++ b/_includes/head.html
@@ -40,6 +40,7 @@
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
     ga('create', '{{ site.google_analytics }}', 'booksandconversations.com');
+    ga('require', 'displayfeatures');
     ga('send', 'pageview');
   </script>
 </head>
